Creating add event button

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -13,3 +13,14 @@ html, body {
 .rbc-calendar {
     height: 100vh;
 }
+
+
+/* FABS */
+.fab {
+    border-radius: 100%;
+    bottom: 25px;
+    font-size: 30px;
+    padding: 25px;
+    position: fixed;
+    right: 25px;
+}
